# content-digest-engine

./: pyproject.toml  requirements.txt
app/summarise/: __main__.py  clibuilder.py
docs/: 05-summarize.md  build-phases.md  readme.md
extension/: background.js  manifest.json  settings.html  settings.js  sidepanel.css  sidepanel.html  sidepanel.js
summarise/: __init__.py  __main__.py  ai.py  cache.py  chunker.py  cli.py  config.py  core.py  extractor.py  fetcher.py  github.py  ocr.py  output.py  podcast.py  providers.py  reader.py  router.py  server.py  themes.py  transcriber.py  youtube.py
summarise/test/: test_chunker.py  test_chunks.py  test_router.py
